--- a/src/renderer/styles/chat.css
+++ b/src/renderer/styles/chat.css
@@ -129,3 +129,26 @@
     padding: 0;
     min-height: 0;
 }
+
+.typing-indicator::after {
+    content: '';
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background-color: #bbb;
+    border-radius: 50%;
+    margin-left: 5px;
+    animation: blink 1s infinite ease-in-out;
+}
+
+@keyframes blink {
+
+    0%,
+    100% {
+        opacity: 0.2;
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
